--- a/less/submenu.less
+++ b/less/submenu.less
@@ -17,6 +17,9 @@
   a{
     color: @black;
   }
+  &.no-border{
+    border: 0;
+  }
 
   &.white{
     color: @white;
